--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -92,7 +93,13 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
+            ],
+            "codeCoverageExclude": [
+              "db.service.ts",
+              "**/*module*.ts",
+              "**/*datasource.ts"
             ],
             "scripts": []
           }
@@ -123,6 +130,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "test-application"
+    }
+  },
+  "defaultProject": "test-application",
+  "cli": {
+    "analytics": false
+  }
 }
